Producto y ProductoDAO, DB llena